update for rich-inline-edit in imeji -- skin_darkGrey

--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_darkGrey/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_darkGrey/styles/appearance.css
@@ -739,8 +739,13 @@ COLOR 4C4C4C was changed to 3C3C3C; - 2011-03-28
 
 /*Richfaces Overwrite*/
 .rich-tool-tip {
-        background-color: #3C3C3C;
+	background-color: #3C3C3C;
 }
+
+.rich-inplace-field {
+	color:#292929 !important;
+}
+
 
 .contentHeader {
 	border-top-style:solid;
