modify skin_darkGrey in case of imeji selectMenu

--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_darkGrey/styles/images.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_darkGrey/styles/images.css
@@ -118,6 +118,18 @@
 		background-repeat: no-repeat;
 		background-position: center center;
 	}
+	
+	.quickSearchIconSmall {
+		background-image: url('../images/All_Search_LensStart_15_Static.gif');
+		background-repeat: no-repeat;
+		background-position: center center;
+		width:1.4545em;
+		height:1.4545em;
+		display:inline-block;
+	}
+	.quickSearchIconSmall:hover, .quickSearchIconSmall:focus {
+		background-image: url('../images/All_Search_LensStart_15_Hover.gif');
+	}
 /*	
 	.quickSearchIcon:hover, .quickSearchIcon:focus {
 		background-image: url('../images/All_Search_LensStart_15_Hover.gif');
