--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_darkGrey/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_darkGrey/styles/appearance.css
@@ -166,8 +166,17 @@ COLOR 4C4C4C was changed to 3C3C3C; - 2011-03-28
 		color: #486131;
 	}
 	/*SEPERATORS*/
-	.metaMenu .seperator, .contentMenu .seperator, .pageBrowser .seperator  {
-		background-color: #486131; 
+	.metaMenu .seperator {
+		background-color: #486131;
+		border-width:0;
+		/*border-color: #393939;*/
+		border-color:#292929;  /* erweitert 2011-03-30 - Marco */
+	}
+	
+	.contentMenu .seperator, .pageBrowser .seperator {
+		background-color: #486131;
+		/*border-color: #393939;*/
+		border-color:#292929;  /* erweitert 2011-03-30 - Marco */
 	}
 	
 	.itemList .seperator {
@@ -177,11 +186,6 @@ COLOR 4C4C4C was changed to 3C3C3C; - 2011-03-28
 	
 	.fullItem .seperator, .tiledList .seperator {
 		background-color: #f0f0f0;
-	}
-	
-	.metaMenu .seperator, .contentMenu .seperator, .pageBrowser .seperator {
-		/*border-color: #393939;*/
-		border-color:#292929;  /* erweitert 2011-03-30 - Marco */
 	}
 	
 	.fullItem .fullItemControls .seperator {
@@ -224,6 +228,12 @@ COLOR 4C4C4C was changed to 3C3C3C; - 2011-03-28
 -----------------------------------------------
 
 */
+
+/* META MENU */
+.metaMenu {
+	height:auto;
+}
+
 	/*COLORING FOR ALL MENU INPUTS AND LABELS*/
 	.metaMenu input, .metaMenu button, .metaMenu a, .quickSearchMenu a, .advancedSearchMenu input, .advancedSearchMenu a, .organisationSearchMenu input, .organisationSearchMenu a, .mainMenu input, .mainMenu a, .contentMenu input, .contentMenu a {
 		/*background-color: #393939;*/
@@ -319,7 +329,28 @@ COLOR 4C4C4C was changed to 3C3C3C; - 2011-03-28
 -----------------------------------------------*/
 
 /*EXT. PAGINATOR*/
-
+	.overlayMenu.itemSelectArea {
+		width:auto;
+	}
+	.overlayMenu img {
+		border:0 none;
+	}
+	.overlayMenu a:hover .quickSearchIconSmall,
+	.overlayMenu a:hover.quickSearchIconSmall {
+		background-color:transparent;
+	}
+	.overlayMenu .menuHeader+.menuBody {
+		display:none;
+	}
+	.overlayMenu .menuHeader:hover+.menuBody {
+		display:block;
+	}
+	.overlayMenu .menuHeader+.menuBody:hover {
+		display:block;
+	}
+	.overlayMenu a.criticalItem:hover {
+		background-color:#D80000;
+	}
 	.paginatorFallbackGoBtn {
 		background-color: #393939;
 		color: #6CAD2F;
@@ -405,7 +436,7 @@ COLOR 4C4C4C was changed to 3C3C3C; - 2011-03-28
 		/*SELECT MENU*/
 	
 	.itemList .checkboxSelectButton {
-		background-color: #393939;
+/*		background-color: #393939; */
 		cursor: pointer;
 	}
 	
@@ -573,6 +604,8 @@ COLOR 4C4C4C was changed to 3C3C3C; - 2011-03-28
 	}
 	/* CSS3 Enhancements */
 	.bordst0 { -moz-border-radius:6px 6px 6px 6px; -webkit-border-radius:6px 6px 6px 6px; border-radius:6px 6px 6px 6px; border:0px; } /* border-radius = CSS3 */
+	.bordst1 { -moz-border-radius:6px 6px 6px 6px; -webkit-border-radius:6px 6px 6px 6px; border-radius:6px 6px 6px 6px; border-width:0.0909em; } /* border-radius = CSS3 */
+	.bordst2 { -moz-border-radius:6px 6px 6px 6px; -webkit-border-radius:6px 6px 6px 6px; border-radius:6px 6px 6px 6px; border-width:0.1818em; } /* border-radius = CSS3 */
 	.shadst1 { -moz-box-shadow:5px 5px 5px #111111; box-shadow:5px 5px 5px #111111; -webkit-box-shadow:5px 5px 5px #111111; } /* CSS3 in: FF > 3.5, Safari + Chrome */
 	
 /*FORM BUTTONS*/
