- Yearbook (Jibx & Tests) - Index - Transformations - CSS - Images - Bugfixes

--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/componentCSS/lists.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/componentCSS/lists.css
@@ -546,6 +546,10 @@ th .selectMenu {
 	text-align:center;
 }
 
+.multipleAjax {
+	margin-bottom:0.363636em;
+}
+
 /*PRINT RELATED DEFINITIONS*/
 
 @media print {
