--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG/styles/images.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG/styles/images.css
@@ -50,6 +50,27 @@
 
 }
 
+.overlayDev {
+    background: inherit;
+    background-image: url('../images/logo_pubman_overlay_dev.png');
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+.overlayTest {
+    background: inherit;
+    background-image: url('../images/logo_pubman_overlay_test.png');
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+.overlayQA {
+    background: inherit;
+    background-image: url('../images/logo_pubman_overlay_qa.png');
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
 /*PUT IN HEADER LOGO FOR PRINT DISPLAY HERE*/
 @media print { .contentMenu {list-style-image:
 		url('../../../globalImages/logo.png');
