-Bugfixes for new advanced search -PUBMAN-2273 fixed: New CoNE-Entries for journals appear as "null" when chosen in item. Occurs in IE. -PUBMAN-2368 fixed: integrate "eDoc AEI" schema within general eDoc multiple import
Former-commit-id: 7d3243aeb78919dfae918b450381da58c4b56dce

--- a/pubman/pubman_presentation/src/main/webapp/header/ui/StandardImports.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/header/ui/StandardImports.jspf
@@ -89,6 +89,9 @@ console.log('Set $pb to ' + $pb().jquery);
 var $pb, jQueryPb;
 $pb = jQuery;
 jQueryPb = jQuery;
+//Globally turn off caching of ajax requests. Bugfix for IE: IE caches ajax requests and therfore does not display the correct value
+//for newly entered or edited CONE entries when using autosuggest.
+$pb.ajaxSetup({ cache: false });
 </script>
 <%--
 <script type="text/javascript" language="JavaScript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js" />
