--- a/pubman/pubman_presentation/src/main/webapp/header/ui/SearchMenu.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/header/ui/SearchMenu.jspf
@@ -42,9 +42,14 @@
 	</span>
 	<h:commandButton id="btnQuickSearchStart" styleClass="small_txtBtn activeButton quickSearchBtn" title="#{tip.adv_search_btStart}" action="#{Search.startSearch}" value="#{lbl.quick_search_btnStart}"/>
 	
-	<h:commandLink id="lnkAdvancedSearch" styleClass="free_area0_p3 advancedSearchMenu tiny_marginLExcl" title="#{tip.search_advanced}" immediate="true" rendered="#{!AdvancedSearch.disableAdvancedSearch}" action="#{AdvancedSearch.showSearchPage}">
+	<!-- 
+	<h:commandLink styleClass="free_area0_p3 advancedSearchMenu tiny_marginLExcl" title="#{tip.search_advanced}" immediate="true" rendered="#{!AdvancedSearch.disableAdvancedSearch}" action="#{AdvancedSearch.showSearchPage}">
 		<h:outputText value="#{lbl.search_lblAdvancedSearch}"/>
 	</h:commandLink>
+	 -->
+	 <h:outputLink id="lnkAdvancedSearch" styleClass="free_area0_p3 advancedSearchMenu tiny_marginLExcl" title="#{tip.search_advanced}" value="#{ApplicationBean.appContext}AdvancedSearchPage.jsp">
+	 	<h:outputText value="#{lbl.search_lblAdvancedSearch}"/>
+	 </h:outputLink>
 
 	<h:commandLink styleClass="free_area0_p3 organisationSearchMenu tiny_marginLExcl endline" id="lnkBrowseBy" title="#{tip.BrowseBy}" immediate="true" action="#{BrowseByPage.loadBrowseBy}">
 		<h:outputText value="#{lbl.mainMenu_lblBrowse}"/>
