--- a/pubman/pubman_presentation/src/main/webapp/userAccountOptions/Password.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/userAccountOptions/Password.jspf
@@ -44,22 +44,23 @@
 			&#160;
 		</h3>
 		<div class="free_area0 itemBlockContent endline">		
-			<div class="free_area0 endline itemLine firstLine">
+			<div class="free_area0 endline itemLine firstLine passArea">
 				<!-- New password -->
 				<h:panelGroup styleClass="quad_area0_p8 xTiny_marginLExcl endline">
 					<h:outputText value="#{lbl.UserAccountOptions_lblNewPassword}" styleClass="double_label"/>
-					<h:inputSecret value="#{UserAccountOptions.password}" styleClass="double_txtInput"/>
+					<h:inputSecret value="#{UserAccountOptions.password}" styleClass="double_txtInput password"/>
 				</h:panelGroup>
 				<!-- Reenter password -->
 				<h:panelGroup styleClass="quad_area0_p8 xTiny_marginLExcl endline">
 					<h:outputText value="#{lbl.UserAccountOptions_lblRepeatNewPassword}" styleClass="double_label"/>
-					<h:inputSecret value="#{UserAccountOptions.secondPassword}" styleClass="double_txtInput"/>
+					<h:inputSecret value="#{UserAccountOptions.secondPassword}" styleClass="double_txtInput secondPassword"/>
 				</h:panelGroup>
 				<!-- Update password -->
 				<h:panelGroup styleClass="quad_area0_p8 xTiny_marginLExcl endline">
 					<h:commandButton styleClass="free_area1_p8 activeButton" value="#{lbl.UserAccountOptions_lblButtonUpdatePassword}" action="#{UserAccountOptions.updatePassword}" />
 				</h:panelGroup>
 			</div>
+			
 		</div>
 	</div>
 </h:panelGroup>
