- Resolved [PUBMAN-2216]: New Text for Start Page in Attachment - Resolved [PUBMAN-976]: View item page: Embargo date not displayed
Former-commit-id: a0f6173940011e4833fd4cc3553731a94baf982a

--- a/pubman/pubman_presentation/src/main/webapp/viewItem/FilesGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItem/FilesGroup.jspf
@@ -102,7 +102,7 @@
 				</b>
 				<span class="xHuge_area0 xTiny_marginLExcl endline">
 					<h:outputText value="#{file.visibility}" rendered="#{ViewItemFull.isStateWithdrawn == false}"/>
-					<h:outputText value=" (#{lbl.EditItem_lblFileEmbargo} #{file.file.defaultMetadata.embargoUntil})" rendered="#{ViewItemFull.isStateWithdrawn == false && file.isVisible == false && file.file.defaultMetadata.embargoUntil != null}"/>
+					<h:outputText value=" (#{lbl.EditItem_lblFileEmbargo} #{file.file.defaultMetadata.embargoUntil})" rendered="#{ViewItemFull.isStateWithdrawn == false && file.isVisible == false && file.file.defaultMetadata.embargoUntil != null && file.file.defaultMetadata.embargoUntil != ''}"/>
 					<h:outputText value="#{lbl.ViewItemFull_lblWithdrawn}" rendered="#{ViewItemFull.isStateWithdrawn == true}"/>
 				</span>
 			</h:panelGroup>
